--- a/INSTAPDD/viewer.html
+++ b/INSTAPDD/viewer.html
@@ -60,12 +60,13 @@ select {
   box-sizing: border-box;
 }
 .grid-item img {
-  position: absolute;
+  position: absolute !important;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  width: 100% !important;
+  height: 100% !important;
+  object-fit: cover !important;
+  pointer-events: none; /* 🔥 evita que el hover del checkbox rompa la capa */
 }
 
 /* Hover info */
