--- a/INSTAPDD/viewer.html
+++ b/INSTAPDD/viewer.html
@@ -42,31 +42,33 @@ select {
   margin: 0;
 }
 
-/* ===== GRID IG ===== */
-.grid {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 3px;
-  padding: 3px;
-}
 .grid-item {
   position: relative;
   width: 100%;
-  padding-top: 100%;
+  padding-top: 100%; /* cuadrado perfecto */
   overflow: hidden;
   border-radius: 3px;
   background: #eee;
-  cursor: pointer;
   box-sizing: border-box;
 }
-.grid-item img {
-  position: absolute !important;
-  top: 0;
-  left: 0;
+
+/* CONTENEDOR FIJO PARA TODA LA CAPA VISUAL */
+.grid-item .inner-content {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/* Imagen — nunca se deforma */
+.grid-item .inner-content img {
   width: 100% !important;
   height: 100% !important;
   object-fit: cover !important;
-  pointer-events: none; /* 🔥 evita que el hover del checkbox rompa la capa */
+  position: absolute;
+  top: 0;
+  left: 0;
+  pointer-events: none;
 }
 
 /* Hover info */
@@ -86,42 +88,59 @@ select {
   opacity: 1;
 }
 
-/* Botón borrar */
-.delete-btn {
+/* Checkbox */
+.hide-check {
   position: absolute;
   top: 6px;
-  right: 6px;
-  background: rgba(255, 0, 0, 0.85);
-  border: none;
-  padding: 4px 8px;
-  color: white;
-  border-radius: 3px;
-  font-size: 12px;
+  left: 6px;
+  z-index: 40;
+  width: 26px;
+  height: 26px;
+  display: none;
+  background: rgba(0,0,0,0.55);
+  border: 2px solid white;
+  border-radius: 6px;
+  box-shadow: 0 0 4px rgba(0,0,0,0.8);
   cursor: pointer;
+}
+
+/* Botones */
+.delete-btn, .edit-btn {
+  z-index: 50;
+  position: absolute;
   opacity: 0;
   transition: .2s;
 }
-.grid-item:hover .delete-btn {
+
+.grid-item:hover .delete-btn,
+.grid-item:hover .edit-btn {
   opacity: 1;
 }
 
-/* 🔥 BOTÓN EDITAR */
-.edit-btn {
-  position: absolute;
+.delete-btn {
   top: 6px;
-  left: 40px;
-  background: rgba(0,0,0,0.7);
-  border: none;
+  right: 6px;
+  background: rgba(255, 0, 0, 0.85);
   padding: 4px 8px;
   color: white;
+  border: none;
   border-radius: 3px;
-  font-size: 12px;
-  cursor: pointer;
-  opacity: 0;
-  transition: .2s;
 }
-.grid-item:hover .edit-btn {
-  opacity: 1;
+
+.edit-btn {
+  top: 6px;
+  left: 40px;
+  background: rgba(0,0,0,0.75);
+  padding: 4px 8px;
+  color: white;
+  border: none;
+  border-radius: 3px;
+}
+
+/* Oculto visual */
+.hidden-item {
+  opacity: 0.40;
+  filter: grayscale(80%);
 }
 
 /* Alertas */
@@ -338,8 +357,11 @@ function addImage(item) {
 
   div.className = "grid-item " + extraClass;
 
-  div.innerHTML = `
+div.innerHTML = `
+  <div class="inner-content">
+
     <input type="checkbox" class="hide-check" onchange="toggleItem(this)">
+    
     <img src="${url}" onclick="downloadImage('${url}')">
 
     <div class="info-hover">
@@ -350,9 +372,10 @@ function addImage(item) {
 
     <button class="delete-btn" onclick="deleteImage('${item.id}', '${item.image_url}', event)">X</button>
 
-    <!-- 🔥 BOTÓN EDITAR -->
     <button class="edit-btn" onclick="editImage('${item.id}', '${item.caption || ""}', '${item.relation || ""}', event)">✏️</button>
-  `;
+
+  </div>
+`;
 
   gallery.appendChild(div);
 }
