--- a/INSTAPDD/viewer.html
+++ b/INSTAPDD/viewer.html
@@ -41,6 +41,13 @@ select {
   font-size: 14px;
   margin: 0;
 }
+/* GRID 3 COLUMNAS TIPO INSTAGRAM */
+.grid {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 3px;
+  padding: 3px;
+}
 
 /* CUADRO PERFECTO 1:1 */
 .grid-item {
