--- a/POSVTA4/POSV4PASS.html
+++ b/POSVTA4/POSV4PASS.html
@@ -2575,7 +2575,7 @@ document.getElementById("btnTestGPS").addEventListener("click", async () => {
 });
   // 📊 Ir al módulo de Corte de Ruta
 document.getElementById("btnCorteRuta").addEventListener("click", () => {
-  window.location.href = "corte_ruta.html";  // o el nombre que me digas
+  window.location.href = "corterutamovil.html";  // o el nombre que me digas
 });
 
 </script>
